<resources>
    <string name="app_name">Time2eaT</string>

    <!--Inventory Tab-->
    <string name="inventory_tab_title">Inventory</string>
    <string name="toggle_btn_text_on">In Stock</string>
    <string name="toggle_btn_text_off">Not in Stock</string>
    <!--Inventory Activity End-->

    <!--Orders Tab-->
    <string name="orders_tab_title">Orders</string>
    <string name="orders_activity_title">Orders</string>
    <string name="orders_ready_tab_title">Ready Orders</string>
    <string name="mark_as_ready_action">Mark as ready</string>
    <string name="mark_as_delivered_action">Mark as delivered</string>
    <string name="order_ready">Ready!</string>
    <string name="no_orders">No Orders!</string>
    <!--Orders Activity End-->

    <!--Order Details Popup-->
    <string name="details_popup_title">Details of order number -</string>
    <string name="custome_name_title">Customer Name:</string>
    <string name="time_title">Time:</string>
    <string name="item_title">Item Title:</string>
    <string name="item_price">Price:</string>
    <string name="time_not_specified">Not Specified</string>
    <string name="meal_title">Meal Title:</string>
    <string name="comment_title">Customer Comment :</string>
    <string name="items_title">Items:</string>
    <string name="meals_title">Meals:</string>
    <!--Order Details Popup End-->

    <string name="star">&#9733;</string>

    <string name="camera_permission_denied">You need camera permission for scanning the bar code</string>
    <string name="action_exit">Exit</string>


    <!--Choose Cafeteria -->
    <string name="choose_cafeteria_title">Choose Cafeteria</string>
    <string name="choose_cafeteria_hint">Search Cafeteria..</string>
    <string name="choose_cafeteria_btn">Next</string>
    <string name="choose_cafeteria_toast">You must choose cafeteria</string>
    <!--Choose Cafeteria End-->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drink_title">Drink:</string>
    <string name="scan_code_action">Scan Order QR Code</string>

    <string name="dialog_manager_password_title">Log out</string>
    <string name="dialog_manager_log_in_password_title">Log In</string>
    <string name="dialog_manager_password_message">Enter manager password</string>
    <string name="dialog_positve">Ok</string>
    <string name="dialog_negative">Cancel</string>
    <string name="dialog_not_match">Password is not correct\nPlease Contact your manager</string>

</resources>
