<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_choose_cafeteria"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg"
    android:isScrollContainer="false"
    tools:context="com.cafeteria.cafeteria_store.ui.ChooseCafeteriaActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvChooseCafeteria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_margin="16dp"
                android:gravity="center"
                android:text="@string/choose_cafeteria_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/colorHeadlines" />

        </RelativeLayout>
    </ScrollView>

    <android.support.v7.widget.AppCompatButton
        android:layout_alignParentBottom="true"
        android:id="@+id/btnNext"
        android:layout_margin="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@color/colorHeadlines"
        android:text="@string/choose_cafeteria_btn"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="@color/colorPrimary" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTvCafeteria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:completionThreshold="1"
        android:dropDownVerticalOffset="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/choose_cafeteria_hint"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorHeadlines"
        android:textColorHint="@color/colorHeadlines" />
</RelativeLayout>